--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
     <div class="heart"></div>
     <div class="container">
-        <a href="../Heart_Trail_Animation/index.html" class="btn btn-outline-light btn-lg" role="button" data-bs-toggle="button">ABRIR</a>
+        <a href="https://magenta-cajeta-daec5a.netlify.app/" class="btn btn-outline-light btn-lg" role="button" data-bs-toggle="button">ABRIR</a>
     </div>
 </body>
 
